force-app/main/default/objects/SolarBot__c/fields/All_Time_Obscured_Percent_Average__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Obscured_Percent_Average__c</fullName>
    <formula>Obscured_Roll_Up__c /  Number_of_Status_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Time Percent Obscured Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>