force-app/main/default/objects/SolarBot__c/fields/All_Time_Temperature_Average__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Temperature_Average__c</fullName>
    <formula>Temp_Rollup__c /  Number_of_Status_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Time Temperature Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>