force-app/main/default/objects/SolarBot__c/fields/kWh_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>kWh_Roll_Up__c</fullName>
    <label>kWh Roll-Up</label>
    <summarizedField>SolarBot_Status__c.Kilowatt_Hours__c</summarizedField>
    <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>