force-app/main/default/objects/SolarBot__c/fields/Obscured_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Obscured_Roll_Up__c</fullName>
    <label>Obscured Roll-Up</label>
    <summarizedField>SolarBot_Status__c.Percent_Obscured__c</summarizedField>
    <summaryForeignKey>SolarBot_Status__c.SolarBot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>