force-app/main/default/objects/SolarBot__c/fields/SolarBot_Model__c.field-meta.xml
<CustomField>
    <fullName>SolarBot_Model__c</fullName>
    <label>SolarBot Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solarbot_Models</valueSetName>
    </valueSet>
</CustomField>