force-app/main/default/objects/SolarBot__c/fields/Warranty_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration__c</fullName>
    <label>Warranty Expiration</label>
    <type>Date</type>
</CustomField>